--- a/public/admin_footer.html
+++ b/public/admin_footer.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin Footer Navigation</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <title>Admin Footer with More Dropdown</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
-    /* Admin Footer Navigation Styles */
     .admin-footer {
       position: fixed;
       bottom: 0;
@@ -21,7 +20,8 @@
       font-size: 0.8rem;
       z-index: 1000;
     }
-    .admin-footer a, .admin-footer .dropdown-toggle {
+    .admin-footer a,
+    .admin-footer .dropdown-toggle {
       text-decoration: none;
       color: #2c3e50;
       display: flex;
@@ -30,14 +30,15 @@
       flex: 1;
       transition: color 0.3s;
     }
-    .admin-footer a i, .admin-footer .dropdown-toggle i {
+    .admin-footer a i,
+    .admin-footer .dropdown-toggle i {
       font-size: 1.2rem;
       margin-bottom: 2px;
     }
     .admin-footer a.active {
       color: #007bff;
     }
-    /* Dropdown Menu Styles */
+    /* Optional: Adjust dropdown menu style for a mobile-friendly look */
     .admin-footer .dropdown-menu {
       min-width: 100px;
       font-size: 0.8rem;
@@ -46,64 +47,26 @@
 </head>
 <body>
   <footer class="admin-footer">
-    <a href="admin_dashboard.html" class="active">
-      <i class="fas fa-tachometer-alt"></i>
-      <span>Dashboard</span>
-    </a>
-    <a href="home_admin.html">
-      <i class="fas fa-home"></i>
-      <span>Home</span>
-    </a>
-    <a href="ecommerce_admin.html">
-      <i class="fas fa-shopping-bag"></i>
-      <span>Shop</span>
-    </a>
-    <a href="details_admin.html">
-      <i class="fas fa-info-circle"></i>
-      <span>Details</span>
-    </a>
-    <a href="payments_admin.html">
-      <i class="fas fa-credit-card"></i>
-      <span>Payments</span>
-    </a>
-    <a href="checkout_admin.html">
-      <i class="fas fa-shopping-cart"></i>
-      <span>Checkout</span>
-    </a>
-    <a href="delivery_admin.html">
-      <i class="fas fa-truck"></i>
-      <span>Delivery</span>
-    </a>
-    <a href="support_admin.html">
-      <i class="fas fa-headset"></i>
-      <span>Support</span>
-    </a>
-    <!-- Main Contact icon instead of Header -->
-    <a href="contact_admin.html">
-      <i class="fas fa-envelope"></i>
-      <span>Contact</span>
-    </a>
-    <a href="analytics_admin.html">
-      <i class="fas fa-chart-line"></i>
-      <span>Analytics</span>
-    </a>
-    <a href="about_admin.html">
-      <i class="fas fa-eye"></i>
-      <span>About</span>
-    </a>
-    <!-- "More" Dropdown containing the Header link -->
+    <a href="admin_dashboard.html" class="active"><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a>
+    <a href="home_admin.html"><i class="fas fa-home"></i><span>Home</span></a>
+    <a href="header_admin.html"><i class="fas fa-ellipsis-h"></i><span>Header</span></a>
+    <a href="ecommerce_admin.html"><i class="fas fa-shopping-bag"></i><span>Shop</span></a>
+    <a href="details_admin.html"><i class="fas fa-info-circle"></i><span>Details</span></a>
+    
+    <!-- "More" dropdown for remaining items -->
     <div class="dropdown">
       <a href="#" class="dropdown-toggle" data-bs-toggle="dropdown">
-        <i class="fas fa-chevron-down"></i>
+        <i class="fas fa-ellipsis-v"></i>
         <span>More</span>
       </a>
       <ul class="dropdown-menu">
-        <li>
-          <a class="dropdown-item" href="header_admin.html">
-            <i class="fas fa-heading"></i> Header
-          </a>
-        </li>
-        <!-- You can add other less-used links here if needed -->
+        <li><a class="dropdown-item" href="payments_admin.html"><i class="fas fa-credit-card"></i> Payments</a></li>
+        <li><a class="dropdown-item" href="checkout_admin.html"><i class="fas fa-shopping-cart"></i> Checkout</a></li>
+        <li><a class="dropdown-item" href="delivery_admin.html"><i class="fas fa-truck"></i> Delivery</a></li>
+        <li><a class="dropdown-item" href="support_admin.html"><i class="fas fa-headset"></i> Support</a></li>
+        <li><a class="dropdown-item" href="contact_admin.html"><i class="fas fa-envelope"></i> Contact</a></li>
+        <li><a class="dropdown-item" href="analytics_admin.html"><i class="fas fa-chart-line"></i> Analytics</a></li>
+        <li><a class="dropdown-item" href="about_admin.html"><i class="fas fa-eye"></i> About</a></li>
       </ul>
     </div>
   </footer>
