--- a/public/admin/admin_dashboard.html
+++ b/public/admin/admin_dashboard.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
   <title>Admin Panel – NextGen E-commerce</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Bootstrap 5 CSS & Font Awesome -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -17,16 +17,16 @@
       flex-direction: column;
       background: #f8f9fa;
     }
-    /* Placeholders for external header and footer */
+    /* Placeholders for external header and footer (loaded from admin folder) */
     #admin-header-placeholder, #admin-footer-placeholder {
       width: 100%;
       flex-shrink: 0;
     }
     /* Wrapper for Sidebar + Main Content */
-    .wrapper {
-      flex: 1;
-      display: flex;
-      overflow: hidden;
+    .wrapper { 
+      flex: 1; 
+      display: flex; 
+      overflow: hidden; 
     }
     /* Sidebar */
     .sidebar {
@@ -36,9 +36,17 @@
       padding: 15px;
       transition: transform 0.3s ease;
     }
-    .sidebar h2 { font-size: 1.2rem; margin-bottom: 15px; }
-    .sidebar ul { list-style: none; padding: 0; }
-    .sidebar ul li { margin-bottom: 5px; }
+    .sidebar h2 { 
+      font-size: 1.2rem; 
+      margin-bottom: 15px; 
+    }
+    .sidebar ul { 
+      list-style: none; 
+      padding: 0; 
+    }
+    .sidebar ul li { 
+      margin-bottom: 5px; 
+    }
     .sidebar ul li a {
       text-decoration: none;
       color: inherit;
@@ -47,7 +55,9 @@
       border-radius: 4px;
     }
     .sidebar ul li a:hover,
-    .sidebar ul li a.active { background: #34495e; }
+    .sidebar ul li a.active { 
+      background: #34495e; 
+    }
     /* Main Content Area */
     .content {
       flex: 1;
@@ -155,7 +165,7 @@
       loadHTML("admin-header-placeholder", "admin/admin_header.html");
       loadHTML("admin-footer-placeholder", "admin/admin_footer.html");
       
-      // After external header loads, setup hamburger toggle for sidebar
+      // Setup hamburger toggle for sidebar after header loads
       setTimeout(() => {
         const adminHamburger = document.getElementById("admin-hamburger");
         const sidebar = document.getElementById("sidebar");
